# swpp-2023-project-team-15

./: README.md
backend/: .coveragerc  README.md  deploy.sh  pyproject.toml
backend/config/: middleware.py  settings.py  urls.py
backend/images/: serializers.py  tests.py  urls.py  views.py
backend/posts/: admin.py  models.py  serializers.py  shell.py  tests.py  urls.py  utils.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_initial.py  0002_postphoto.py  0003_alter_post_options.py  0003_restaurant_alter_post_restaurant_id.py  0004_post_likes.py  0004_remove_post_restaurant_id_post_restaurant.py  0005_post_tags.py  0005_remove_post_menu_remove_post_title.py  0006_alter_post_user.py  0007_restaurant_search_id.py  0008_restaurant_category_name.py  0009_post_sentiment.py  0010_alter_post_sentiment.py
backend/tags/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/tags/migrations/: 0001_initial.py  0002_rename_tags_tag.py  0003_tag_type.py  0004_alter_tag_type.py  0005_alter_tag_type.py
backend/users/: admin.py  models.py  serializers.py  shell.py  tests.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_tag_user_avatar_url_user_description_and_more.py  0003_remove_user_usertags.py  0004_delete_tag_user_tags.py  0005_remove_user_follower_count_and_more.py  0006_alter_user_description.py
frontend/EatAndTell/: build.gradle.kts  keystore  settings.gradle.kts
frontend/EatAndTell/app/: build.gradle.kts
frontend/EatAndTell/app/release/: output-metadata.json
(+139 files in other folders)
