[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jaechan <dlwocks31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
pymysql = "^1.1.0"
python-decouple = "^3.8"
gunicorn = "^21.2.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
